--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,69 @@ header h1 {
     margin-right: 20px;
 }
 
+/*Feedback section*/
+
+#p3 {
+    background-color: white;
+    width: 80%;
+    max-width: 500px;
+    height: auto;
+    border-radius: 50px;
+    font-size: 30px;
+    text-align: center;
+    margin: 50px auto;
+}
+
+
+/* Form Box Styling */
+.form-box1,
+.form-box2 {
+    width: 80%;
+    max-width: 600px;
+    margin: 20px auto;
+    background: white;
+    padding: 20px 25px;
+    border-radius: 12px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+
+
+/* Labels & Inputs */
+label {
+    display: block;
+    margin-top: 15px;
+    font-weight: bold;
+}
+
+input,
+select,
+textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 6px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+/* Buttons */
+button {
+    width: 100%;
+    padding: 12px;
+    margin-top: 20px;
+    background-color: #2c3e50;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+button:hover {
+    background-color: #1b2836;
+}
+
 /* FOOTER */
 footer {
     margin-top: 30px;
